@@ -1,3 +1,7 @@
+2004-07-02  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b236
+
+        *  Fix: Delete Photo/Album was b0rked, because disabled Buttons are not sent when commit.
+                But we tested for the commit Button. Added hidden field which is set on submit.
 2004-07-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b235
 
 	* Change: Don't recursively run through each album to find albums
